--- a/src/components/FixedBg/FixedBg.css
+++ b/src/components/FixedBg/FixedBg.css
@@ -2,9 +2,7 @@
  
   position: sticky;
     /* background-image: url('../../Assets/virtual-ass.jpg'); */
-
     height: 100vh;
-   
     z-index: -5;
     top:0;
   left:0;
@@ -14,4 +12,5 @@ img{
   position: fixed;
   object-fit: fill;
   width: 100%;
+  height: 100%;
 }
