--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -2,7 +2,7 @@
    position: absolute;
     height: 100%;
     top: 70px;
-    z-index: 1000;
+    z-index: 999;
    background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
@@ -56,6 +56,7 @@
   }
   }
 
+
   @media screen and (max-width: 375px) {
    
     .intro{
@@ -63,4 +64,8 @@
     padding-left: 2%;
     padding-right: 2%;
     }
+    .intro h1{
+      font-size: 28px;
+  }
+
   }
