--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -87,6 +87,10 @@ a {
   display: none;
 }
 
+.sc-gsDKAQ{
+  z-index: 10000;
+}
+
 @media only screen and (max-width: 700px) {
   .navbar{
     padding-right: 20px;
@@ -101,15 +105,13 @@ a {
     justify-content: flex-end;
     justify-items: flex-end;
   }
-  .eMMMxV{
-    z-index: 10000;
-  }
-
+ 
   .mobile-links {
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 20px;
+    background: #ffffff;
   }
   .mobile-links a {
     text-decoration: none;
@@ -119,39 +121,3 @@ a {
   }
 
 }
-
-/* @media screen and (max-width: 600px) {
-   
-    .navbar{
-    width: 100%;
-    width: 100vw;
-     
-    }
-  }
-  @media screen and (max-width: 560px) {
-   
-    .about{
-display: none;
-    }
-    .logo{
-width: 100px;
-    }
-  }
-
-  @media screen and (max-width: 550px) {
-   
-    .navbar{
- justify-content: space-between;
- padding-left: 2%;
- padding-right: 2%;
-    }
-
-  }
-
-  @media screen and (max-width: 360px) {
-   
-    .logo{
-width: 80px;
-    }
-
-  } */
